--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <style name="Theme.App.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorControlNormal">#123</item>
+        <item name="colorControlActivated">#123</item>
+        <item name="colorControlHighlight">#123</item>
+    </style>
+
 </resources>
