--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F5F5F5</color>
-    <color name="colorPrimaryDark">#E0E0E0</color>
+    <color name="colorPrimaryDark">#FF45494A</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="backgroundColor">#FAFAFA</color>
+    <color name="backgroundColor">#fafafa</color>
     <color name="textColor">#123</color>
     <color name="cardColor">#FFFFFF</color>
 </resources>
