--- a/res/layout/fragment_paye.xml
+++ b/res/layout/fragment_paye.xml
@@ -53,7 +53,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="0"
-                        android:id="@+id/textView6"
+                        android:id="@+id/grossSalary"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:textColor="#ffffff" />
